--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,17 @@ else (WIN32)
 	set(EXEC_SUF "")
 endif (WIN32)
 
+IF(MSVC80)
+	SET(CMAKE_CXX_WARNING_LEVEL 1)
+	IF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+		STRING(REGEX REPLACE "/W[0-4]" "/W1"
+            	CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+   	ELSE(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+     		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W1")
+	ENDIF(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+ENDIF(MSVC80)
+
+
 
 find_package(Log4cxx REQUIRED)
 find_package(Boost REQUIRED)
