--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -6,12 +6,17 @@
 #	touch stamp-build
 
 
+
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/pom.xml ${CMAKE_CURRENT_BINARY_DIR}/
-	)
+)
 
-ADD_CUSTOM_TARGET( generator 
-	mvn -Dbase=${CMAKE_CURRENT_SOURCE_DIR} -Prelease package
+ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/pom.xml ${CMAKE_CURRENT_BINARY_DIR}/
+)
+
+ADD_CUSTOM_COMMAND(OUTPUT ${XMLBEANSXX_GENBUILDIN} ${XMLBEANSXX_GEN}
+	COMMAND mvn -Dbase=${CMAKE_CURRENT_SOURCE_DIR} -Prelease package
 	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
-	)
+)
 
