--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -59,24 +59,24 @@ SET(XMLBEANSXX_SRC
 )
 
 include_directories(
-			${CMAKE_CURRENT_BINARY_DIR} 
-			${CMAKE_CURRENT_SOURCE_DIR}
-			${CMAKE_CURRENT_BINARY_DIR}/..
-			${CMAKE_CURRENT_SOURCE_DIR}/..
-		)
+	${CMAKE_CURRENT_BINARY_DIR} 
+	${CMAKE_CURRENT_SOURCE_DIR}
+	${CMAKE_CURRENT_BINARY_DIR}/..
+	${CMAKE_CURRENT_SOURCE_DIR}/..
+)
 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/config.h.default ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
 )
 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.cpp
-	COMMAND ${PROJECT_BINARY_DIR}/generator/target/xmlbeansxx-gen/bin/xmlbeansxx-genbuiltin${EXEC_SUF} ${CMAKE_CURRENT_SOURCE_DIR}/
-	DEPENDS generator
+	COMMAND ${XMLBEANSXX_GENBUILDIN} ${CMAKE_CURRENT_SOURCE_DIR}/
+	DEPENDS ${XMLBEANSXX_GENBUILDIN}
 )
 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.h ${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.cpp
-	COMMAND ${PROJECT_BINARY_DIR}/generator/target/xmlbeansxx-gen/bin/xmlbeansxx-gen${EXEC_SUF} ${CMAKE_CURRENT_SOURCE_DIR}/xml-fragment.xsd
-	DEPENDS generator
+	COMMAND ${XMLBEANSXX_GEN} ${CMAKE_CURRENT_SOURCE_DIR}/xml-fragment.xsd
+	DEPENDS ${XMLBEANSXX_GEN}
 )
 
 
