--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -1,4 +1,10 @@
 
+
+
+
+XMLBEANSXX_GEN(xml-fragment.xsd xml-fragment.cpp xml-fragment.h)
+
+
 SET(XMLBEANSXX_SRC 
 	XmlTypesGen.xh
 	XmlTypesGen.xcpp
@@ -52,35 +58,35 @@ SET(XMLBEANSXX_SRC
 	
 	${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h
 	${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.cpp
-	${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.h
-	${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.cpp
+#	${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.h
+#	${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.cpp
 
 	${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
+	
+	${xml-fragment.xsd_SRC}
 )
 
-include_directories(
+INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_BINARY_DIR} 
 	${CMAKE_CURRENT_SOURCE_DIR}
 	${CMAKE_CURRENT_BINARY_DIR}/..
 	${CMAKE_CURRENT_SOURCE_DIR}/..
 )
 
+#make a config file
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
 	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/config.h.default ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
 )
 
+
+#generate buildin system types 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.cpp
-	COMMAND ${XMLBEANSXX_GENBUILDIN} ${CMAKE_CURRENT_SOURCE_DIR}/
-	DEPENDS ${XMLBEANSXX_GENBUILDIN}
-)
-
-ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.h ${CMAKE_CURRENT_BINARY_DIR}/xml-fragment.cpp
-	COMMAND ${XMLBEANSXX_GEN} ${CMAKE_CURRENT_SOURCE_DIR}/xml-fragment.xsd
-	DEPENDS ${XMLBEANSXX_GEN}
+	COMMAND ${XMLBEANSXX_GENBUILDIN_PROG} ${CMAKE_CURRENT_SOURCE_DIR}/
+	DEPENDS generator
 )
 
 
-add_library (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
+ADD_LIBRARY (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
 TARGET_LINK_LIBRARIES (xmlbeansxx ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY})
 
 
