--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,57 +15,45 @@ SET(TEST_PROGS
 	XmlArrayTest
 	ArrayTest
 #	GenTest
-#	ParseTest
+	ParseTest
 #	UnqualTest
-#	EnumTest
-#	XPathTest
-#	EntitiesTest
+	EnumTest
+	XPathTest
+	EntitiesTest
 )
 
-# c.xsd
-#SET(C_SRC ${CMAKE_CURRENT_BINARY_DIR}/c.h ${CMAKE_CURRENT_BINARY_DIR}/c.cpp)
 
-MACRO(GEN XSD SRC_C SRC_H)
-	SET(${XSD}_SRC ${CMAKE_CURRENT_BINARY_DIR}/${SRC_H} ${CMAKE_CURRENT_BINARY_DIR}/${SRC_C})
-	ADD_CUSTOM_COMMAND(OUTPUT ${${XSD}_SRC}
-		COMMAND ${XMLBEANSXX_GEN} ${CMAKE_CURRENT_SOURCE_DIR}/${XSD}
-		DEPENDS ${XMLBEANSXX_GEN} ${XSD}
-			
-	)	
-ENDMACRO(GEN)
 
 include_directories(
 	${CMAKE_CURRENT_BINARY_DIR} 
 	${CMAKE_CURRENT_SOURCE_DIR}
-	${CMAKE_CURRENT_BINARY_DIR}/..
-	${CMAKE_CURRENT_SOURCE_DIR}/..
+	${PROJECT_SOURCE_DIR}/src/xmlbeansxx
+	${PROJECT_SOURCE_DIR}/src
+	${PROJECT_BINARY_DIR}/src/xmlbeansxx
+	${PROJECT_BINARY_DIR}/src
 )
 
 
-GEN(c.xsd c.cpp c.h)
-#ADD_CUSTOM_COMMAND(OUTPUT ${C_SRC}
-#	COMMAND ${XMLBEANSXX_GEN} ${CMAKE_CURRENT_SOURCE_DIR}/c.xsd
-#	DEPENDS ${XMLBEANSXX_GEN}
-#)
+XMLBEANSXX_GEN(c.xsd 		c.cpp 		c.h)
+XMLBEANSXX_GEN(pawel.xsd 	pawel.cpp 	pawel.h)
+XMLBEANSXX_GEN(unqual.xsd 	unqual.cpp 	unqual.h)
+XMLBEANSXX_GEN(entities.xsd 	entities.cpp 	entities.h)
 
-
-ADD_EXECUTABLE(BeansTest	TestApp.cpp BeansTest.cpp BeansTest.h)
-ADD_EXECUTABLE(XmlArrayTest	TestApp.cpp XmlArrayTest.cpp XmlArrayTest.h)
-ADD_EXECUTABLE(ArrayTest	TestApp.cpp ArrayTest.cpp ArrayTest.h 			${c.xsd_SRC})
-#ADD_EXECUTABLE(GenTest		TestApp.cpp GenTest.cpp GenTest.h			c.h c.cpp pawel.h pawel.cpp)
-#ADD_EXECUTABLE(ParseTest	TestApp.cpp ParseTest.cpp ParseTest.h 			c.h c.cpp)
-#ADD_EXECUTABLE(UnqualTest	TestApp.cpp UnqualTest.cpp UnqualTest.h 		unqual.h unqual.cpp)
-#ADD_EXECUTABLE(EnumTest		TestApp.cpp EnumTest.cpp EnumTest.h			pawel.h pawel.cpp)
-#ADD_EXECUTABLE(XPathTest	TestApp.cpp XPathTest.cpp XPathTest.h			pawel.h pawel.cpp)
-#ADD_EXECUTABLE(EntitiesTest	TestApp.cpp EntitiesTest.cpp EntitiesTest.h		entities.h entities.cpp)
+ADD_EXECUTABLE(BeansTest	TestApp.cpp BeansTest.cpp	BeansTest.h)
+ADD_EXECUTABLE(XmlArrayTest	TestApp.cpp XmlArrayTest.cpp	XmlArrayTest.h)
+ADD_EXECUTABLE(ArrayTest	TestApp.cpp ArrayTest.cpp	ArrayTest.h		${c.xsd_SRC})
+#ADD_EXECUTABLE(GenTest		TestApp.cpp GenTest.cpp		GenTest.h		${c.xsd_SRC} ${pawel.xsd_SRC})
+ADD_EXECUTABLE(ParseTest	TestApp.cpp ParseTest.cpp 	ParseTest.h 		${c.xsd_SRC})
+#ADD_EXECUTABLE(UnqualTest	TestApp.cpp UnqualTest.cpp 	UnqualTest.h 		${unqual.xsd_SRC})
+ADD_EXECUTABLE(EnumTest		TestApp.cpp EnumTest.cpp 	EnumTest.h		${pawel.xsd_SRC})
+ADD_EXECUTABLE(XPathTest	TestApp.cpp XPathTest.cpp 	XPathTest.h		${pawel.xsd_SRC})
+ADD_EXECUTABLE(EntitiesTest	TestApp.cpp EntitiesTest.cpp 	EntitiesTest.h		${entities.xsd_SRC})
 
 
 
 FOREACH(P ${TEST_PROGS})
 	TARGET_LINK_LIBRARIES(${P} ${TEST_LIBS})
 ENDFOREACH(P)
-
-#TARGET_LINK_LIBRARIES(BeansTest ${TEST_LIBS})
 
 
 ADD_CUSTOM_TARGET(tests
