--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ FIND_PACKAGE(Gmp REQUIRED)
 FIND_PACKAGE(Gmpxx REQUIRED)
 FIND_PACKAGE(XmlbeansxxInternal REQUIRED)
 
-INCLUDE_DIRECTORIES (${XERCES_INCLUDE_DIR} ${LOG4CXX_INCLUDE_DIR})
+INCLUDE_DIRECTORIES (${XERCES_INCLUDE_DIR} ${LOG4CXX_INCLUDE_DIR} ${CPPUNIT_INCLUDE_DIR})
 
 
 ADD_SUBDIRECTORY (generator)
