--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 
 PROJECT (xmlbeansxx)
 
+SET(XMLBEANSXX_VERSION
+ SOVERSION ${XMLBEANSXX_SOVERSION}
+
+
 cmake_minimum_required(VERSION 2.4.7)
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
