--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 
 PROJECT (xmlbeansxx)
 
-SET(XMLBEANSXX_VERSION
- SOVERSION ${XMLBEANSXX_SOVERSION}
+SET(XMLBEANSXX_VERSION 0.8.8)
+SET(XMLBEANSXX_SOVERSION 1.0.7)
 
 
-cmake_minimum_required(VERSION 2.4.7)
+#cmake_minimum_required(VERSION 2.4.7)
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 
