--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -21,4 +21,9 @@ ADD_CUSTOM_TARGET(generator
 	DEPENDS ${XMLBEANSXX_GEN_PROG}
 )
 
-
+INSTALL(DIRECTORY ${PROJECT_BINARY_DIR}/generator/target/xmlbeansxx-gen/ 
+	DESTINATION share/xmlbeansxx
+	PATTERN "bin/*" PERMISSIONS 	OWNER_EXECUTE	OWNER_WRITE	OWNER_READ
+	                      		GROUP_EXECUTE			GROUP_READ
+					WORLD_EXECUTE			WORLD_READ
+)
