--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -134,16 +134,20 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURR
 )
 
 
-ADD_LIBRARY (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
+ADD_LIBRARY (xmlbeansxx SHARED ${XMLBEANSXX_SRC})
+#ADD_LIBRARY (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
 TARGET_LINK_LIBRARIES (xmlbeansxx ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY})
-SET_TARGET_PROPERTIES (xmlbeansxx PROPERTIES VERSION ${XMLBEANSXX_VERSION} SOVERSION ${XMLBEANSXX_SOVERSION} )
+SET_TARGET_PROPERTIES (xmlbeansxx PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
 SET(XMLBEANSXX_INCLUDE_INSTALL_DIR  "${INCLUDE_INSTALL_DIR}/xmlbeansxx")
 
 INSTALL(FILES
 	${XMLBEANSXX_INSTALL_HEADERS}
-	DESTINATION ${XMLBEANSXX_INCLUDE_INSTALL_DIR}
+	DESTINATION include/xmlbeansxx
+)
+INSTALL(TARGETS xmlbeansxx
+	LIBRARY DESTINATION lib
 )
 
 
