--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,10 @@
 
 
 
-ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/log4j.xml
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/log4j.xml.default ${CMAKE_CURRENT_BINARY_DIR}/log4j.xml
-)
+#ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/log4j.xml
+#	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/log4j.xml.default ${CMAKE_CURRENT_BINARY_DIR}/log4j.xml
+#)
+
 
 SET(TEST_LIBS
 	xmlbeansxx
@@ -39,23 +40,24 @@ XMLBEANSXX_GEN(pawel.xsd 	pawel.cpp 	pawel.h)
 XMLBEANSXX_GEN(unqual.xsd 	unqual.cpp 	unqual.h)
 XMLBEANSXX_GEN(entities.xsd 	entities.cpp 	entities.h)
 
-ADD_EXECUTABLE(BeansTest	TestApp.cpp BeansTest.cpp	BeansTest.h)
-ADD_EXECUTABLE(XmlArrayTest	TestApp.cpp XmlArrayTest.cpp	XmlArrayTest.h)
-ADD_EXECUTABLE(ArrayTest	TestApp.cpp ArrayTest.cpp	ArrayTest.h		${c.xsd_SRC})
-#ADD_EXECUTABLE(GenTest		TestApp.cpp GenTest.cpp		GenTest.h		${c.xsd_SRC} ${pawel.xsd_SRC})
-#ADD_EXECUTABLE(ParseTest	TestApp.cpp ParseTest.cpp 	ParseTest.h 		${c.xsd_SRC})
-#ADD_EXECUTABLE(UnqualTest	TestApp.cpp UnqualTest.cpp 	UnqualTest.h 		${unqual.xsd_SRC})
-ADD_EXECUTABLE(EnumTest		TestApp.cpp EnumTest.cpp 	EnumTest.h		${pawel.xsd_SRC})
-ADD_EXECUTABLE(XPathTest	TestApp.cpp XPathTest.cpp 	XPathTest.h		${pawel.xsd_SRC})
-ADD_EXECUTABLE(EntitiesTest	TestApp.cpp EntitiesTest.cpp 	EntitiesTest.h		${entities.xsd_SRC})
+XMLBEANSXX_COPY(log4j.xml.default	log4j.xml)
+XMLBEANSXX_COPY(entities.xml.default	entities.xml)
+
+
+ADD_EXECUTABLE(BeansTest	TestApp.cpp BeansTest.cpp	BeansTest.h 						)
+ADD_EXECUTABLE(XmlArrayTest	TestApp.cpp XmlArrayTest.cpp	XmlArrayTest.h						)
+ADD_EXECUTABLE(ArrayTest	TestApp.cpp ArrayTest.cpp	ArrayTest.h		${c.xsd_SRC}			)
+#ADD_EXECUTABLE(GenTest		TestApp.cpp GenTest.cpp		GenTest.h		${c.xsd_SRC} ${pawel.xsd_SRC}	)
+#ADD_EXECUTABLE(ParseTest	TestApp.cpp ParseTest.cpp 	ParseTest.h 		${c.xsd_SRC}			)
+#ADD_EXECUTABLE(UnqualTest	TestApp.cpp UnqualTest.cpp 	UnqualTest.h 		${unqual.xsd_SRC}		)
+ADD_EXECUTABLE(EnumTest		TestApp.cpp EnumTest.cpp 	EnumTest.h		${pawel.xsd_SRC}		)
+ADD_EXECUTABLE(XPathTest	TestApp.cpp XPathTest.cpp 	XPathTest.h		${pawel.xsd_SRC}		)
+ADD_EXECUTABLE(EntitiesTest	TestApp.cpp EntitiesTest.cpp 	EntitiesTest.h		${entities.xsd_SRC}		)
 
 
 
 FOREACH(P ${TEST_PROGS})
 	TARGET_LINK_LIBRARIES(${P} ${TEST_LIBS})
+	ADD_TEST("${P}_TEST" ${P})
 ENDFOREACH(P)
 
-
-ADD_CUSTOM_TARGET(tests
-	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/log4j.xml BeansTest
-)
