--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ SET(XMLBEANSXX_VERSION 0.8.8)
 SET(XMLBEANSXX_SOVERSION 1.0.7)
 
 
+INCLUDE(CPack)
+ENABLE_TESTING()
+
 #cmake_minimum_required(VERSION 2.4.7)
 SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
@@ -25,7 +28,7 @@ IF (WIN32)
 ELSE (WIN32) 
 	SET(EXEC_SUF "")
 ENDIF (WIN32)
-
+  
 
 
 SET(XMLBEANSXX_GEN_PROG		${PROJECT_BINARY_DIR}/generator/target/xmlbeansxx-gen/bin/xmlbeansxx-gen${EXEC_SUF})
@@ -39,7 +42,11 @@ FIND_PACKAGE(Xerces REQUIRED)
 FIND_PACKAGE(CppUnit REQUIRED)
 FIND_PACKAGE(Gmp REQUIRED)
 FIND_PACKAGE(Gmpxx REQUIRED)
+
+FIND_PACKAGE(LibXml2)
+
 FIND_PACKAGE(XmlbeansxxInternal REQUIRED)
+
 
 INCLUDE_DIRECTORIES (${XERCES_INCLUDE_DIR} ${LOG4CXX_INCLUDE_DIR} ${CPPUNIT_INCLUDE_DIR})
 
