--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -4,13 +4,22 @@
 
 XMLBEANSXX_GEN(xml-fragment.xsd xml-fragment.cpp xml-fragment.h)
 
-IF (WIN32)
-	SET(PARSERS_H   XercesParser.h)
-	SET(PARSERS_CPP XercesParser.cpp)
-ELSE (WIN32)
+#make a config file
+IF (LIBXML2_FOUND) 
+	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
+		COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/config.h.default ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
+	)
+	SET(LIBXML2_LIB ${LIBXML2_LIBRARIES})
 	SET(PARSERS_H   LibXMLParser.h   XercesParser.h)
 	SET(PARSERS_CPP LibXMLParser.cpp XercesParser.cpp)
-ENDIF (WIN32)
+ELSE (LIBXML2_FOUND) 
+	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
+		COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/config.h.noLibxml2 ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
+	)
+	SET(LIBXML2_LIB "")
+	SET(PARSERS_H   XercesParser.h)
+	SET(PARSERS_CPP XercesParser.cpp)
+ENDIF (LIBXML2_FOUND) 
 
 
 SET(XMLBEANSXX_INSTALL_HEADERS 
@@ -122,11 +131,6 @@ INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}/..
 )
 
-#make a config file
-ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
-	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/config.h.default ${CMAKE_CURRENT_BINARY_DIR}/config_auto.h
-)
-
 
 #generate buildin system types 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.cpp
@@ -137,7 +141,7 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURR
 
 ADD_LIBRARY (xmlbeansxx SHARED ${XMLBEANSXX_SRC})
 #ADD_LIBRARY (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
-TARGET_LINK_LIBRARIES (xmlbeansxx ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY})
+TARGET_LINK_LIBRARIES (xmlbeansxx ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY} ${LIBXML2_LIB})
 SET_TARGET_PROPERTIES (xmlbeansxx PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
