--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -139,8 +139,8 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURR
 )
 
 
-ADD_LIBRARY (xmlbeansxx SHARED ${XMLBEANSXX_SRC})
-#ADD_LIBRARY (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
+#ADD_LIBRARY (xmlbeansxx SHARED ${XMLBEANSXX_SRC})
+ADD_LIBRARY (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
 TARGET_LINK_LIBRARIES (xmlbeansxx ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY} ${LIBXML2_LIB})
 SET_TARGET_PROPERTIES (xmlbeansxx PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 
