--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -147,13 +147,13 @@ SET_TARGET_PROPERTIES (xmlbeansxx PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
 SET(XMLBEANSXX_INCLUDE_INSTALL_DIR  "${INCLUDE_INSTALL_DIR}/xmlbeansxx")
 
-INSTALL(FILES
-	${XMLBEANSXX_INSTALL_HEADERS}
-	DESTINATION include/xmlbeansxx
-)
-INSTALL(TARGETS xmlbeansxx
-	LIBRARY DESTINATION lib
-)
+#INSTALL(FILES
+#	${XMLBEANSXX_INSTALL_HEADERS}
+#	DESTINATION include/xmlbeansxx
+#)
+#INSTALL(TARGETS xmlbeansxx
+#	LIBRARY DESTINATION lib
+#)
 
 
 
