--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -147,10 +147,10 @@ SET_TARGET_PROPERTIES (xmlbeansxx PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
 SET(XMLBEANSXX_INCLUDE_INSTALL_DIR  "${INCLUDE_INSTALL_DIR}/xmlbeansxx")
 
-#INSTALL(FILES
-#	${XMLBEANSXX_INSTALL_HEADERS}
-#	DESTINATION include/xmlbeansxx
-#)
+INSTALL(FILES
+	${XMLBEANSXX_INSTALL_HEADERS}
+	DESTINATION include/xmlbeansxx
+)
 #INSTALL(TARGETS xmlbeansxx
 #	LIBRARY DESTINATION lib
 #)
