--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -35,7 +35,8 @@ SET(GEN_JAR
 )
 
 
-ADD_CUSTOM_COMMAND(OUTPUT  ${XMLBEANSXX_GEN_PROG} ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR}
+#ADD_CUSTOM_COMMAND(OUTPUT ${XMLBEANSXX_GENBUILDIN_PROG} ${XMLBEANSXX_GEN_PROG} ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR}
+ADD_CUSTOM_COMMAND(OUTPUT ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR}
 	COMMAND mvn -Dbase=${CMAKE_CURRENT_SOURCE_DIR} -Prelease package
 	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
 )
