--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -42,7 +42,7 @@ ADD_CUSTOM_COMMAND(OUTPUT ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR}
 )
 
 ADD_CUSTOM_TARGET(generator
-	DEPENDS ${XMLBEANSXX_GEN_PROG}
+	DEPENDS ${GEN_BINFILES}
 )
 
 
