--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -151,9 +151,10 @@ INSTALL(FILES
 	${XMLBEANSXX_INSTALL_HEADERS}
 	DESTINATION include/xmlbeansxx
 )
-#INSTALL(TARGETS xmlbeansxx
-#	LIBRARY DESTINATION lib
-#)
+INSTALL(TARGETS xmlbeansxx
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib
+)
 
 
 
