--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -154,6 +154,9 @@ INSTALL(FILES
 INSTALL(TARGETS xmlbeansxx
 	LIBRARY DESTINATION lib
 	ARCHIVE DESTINATION lib
+	CONFIGURATIONS Debug
+	RENAME xmlbeansxxd
+	
 )
 
 
