--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -151,13 +151,19 @@ INSTALL(FILES
 	${XMLBEANSXX_INSTALL_HEADERS}
 	DESTINATION include/xmlbeansxx
 )
-INSTALL(TARGETS xmlbeansxx
-	LIBRARY DESTINATION lib
-	ARCHIVE DESTINATION lib
-	CONFIGURATIONS Debug
-	RENAME xmlbeansxxd
-	
-)
+IF(WIN32)
+	INSTALL(TARGETS xmlbeansxx
+		LIBRARY DESTINATION lib
+		ARCHIVE DESTINATION lib
+		CONFIGURATIONS Debug
+		RENAME xmlbeansxxd	
+	)
+ELSE(WIN32)
+	INSTALL(TARGETS xmlbeansxx
+		LIBRARY DESTINATION lib
+		ARCHIVE DESTINATION lib
+	)
+ENDIF(WIN32)
 
 
 
