--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -139,10 +139,10 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURR
 )
 
 
-#ADD_LIBRARY (xmlbeansxx SHARED ${XMLBEANSXX_SRC})
-ADD_LIBRARY (xmlbeansxx STATIC ${XMLBEANSXX_SRC})
-TARGET_LINK_LIBRARIES (xmlbeansxx ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY} ${LIBXML2_LIB})
-SET_TARGET_PROPERTIES (xmlbeansxx PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
+#ADD_LIBRARY (${XMLBEANSXX_LIB} SHARED ${XMLBEANSXX_SRC})
+ADD_LIBRARY (${XMLBEANSXX_LIB} STATIC ${XMLBEANSXX_SRC})
+TARGET_LINK_LIBRARIES (${XMLBEANSXX_LIB} ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY} ${LIBXML2_LIB})
+SET_TARGET_PROPERTIES (${XMLBEANSXX_LIB} PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
 SET(XMLBEANSXX_INCLUDE_INSTALL_DIR  "${INCLUDE_INSTALL_DIR}/xmlbeansxx")
@@ -151,19 +151,11 @@ INSTALL(FILES
 	${XMLBEANSXX_INSTALL_HEADERS}
 	DESTINATION include/xmlbeansxx
 )
-IF(WIN32)
-	INSTALL(TARGETS xmlbeansxx
-		LIBRARY DESTINATION lib
-		ARCHIVE DESTINATION lib
-		CONFIGURATIONS Debug
-		RENAME xmlbeansxxd	
-	)
-ELSE(WIN32)
-	INSTALL(TARGETS xmlbeansxx
-		LIBRARY DESTINATION lib
-		ARCHIVE DESTINATION lib
-	)
-ENDIF(WIN32)
+
+INSTALL(TARGETS ${XMLBEANSXX_LIB}
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib
+)
 
 
 
