--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,10 +28,10 @@ ENDIF(MSVC80)
 FIND_PACKAGE(Log4cxx REQUIRED)
 FIND_PACKAGE(Boost REQUIRED)
 FIND_PACKAGE(Xerces REQUIRED)
-FIND_PACKAGE(CppUnit REQUIRED)
 FIND_PACKAGE(Gmp REQUIRED)
 FIND_PACKAGE(Gmpxx REQUIRED)
 
+FIND_PACKAGE(CppUnit)
 FIND_PACKAGE(LibXml2)
 
 FIND_PACKAGE(XmlbeansxxInternal REQUIRED)
@@ -42,5 +42,8 @@ INCLUDE_DIRECTORIES (${XERCES_INCLUDE_DIR} ${LOG4CXX_INCLUDE_DIR} ${CPPUNIT_INCL
 
 ADD_SUBDIRECTORY (generator)
 ADD_SUBDIRECTORY (src/xmlbeansxx)
-ADD_SUBDIRECTORY (tests)
+
+IF(CPPUNIT_FOUND)
+	ADD_SUBDIRECTORY (tests)
+ENDIF(CPPUNIT_FOUND)
 
