--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -43,7 +43,7 @@ ADD_CUSTOM_COMMAND(OUTPUT ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR}
 )
 
 ADD_CUSTOM_TARGET(generator
-	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/pom.xml ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR}
+	DEPENDS ${GEN_BINFILES} ${GEN_LIBFILES} ${GEN_JAR} ${CMAKE_CURRENT_BINARY_DIR}/pom.xml 
 )
 
 
