--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,8 @@ ENDIF(MSVC80)
 FIND_PACKAGE(Log4cxx REQUIRED)
 FIND_PACKAGE(Boost REQUIRED)
 FIND_PACKAGE(Xerces REQUIRED)
-FIND_PACKAGE(Gmp REQUIRED)
-FIND_PACKAGE(Gmpxx REQUIRED)
+FIND_PACKAGE(Gmp)
+FIND_PACKAGE(Gmpxx)
 
 FIND_PACKAGE(CppUnit)
 FIND_PACKAGE(LibXml2)
