--- a/src/xmlbeansxx/CMakeLists.txt
+++ b/src/xmlbeansxx/CMakeLists.txt
@@ -24,8 +24,10 @@ ENDIF (LIBXML2_FOUND)
 
 IF (GMPXX_FOUND)
 	XMLBEANSXX_COPY(CoreTypes.h.gmpxx  CoreTypes.h)
+	SET(NUM_LIBRARY ${GMP_LIBRARY} ${GMPXX_LIBRARY})
 ELSE (GMPXX_FOUND)
 	XMLBEANSXX_COPY(CoreTypes.h.no_gmpxx  CoreTypes.h)
+	SET(NUM_LIBRARY "")
 ENDIF (GMPXX_FOUND)
 
 
@@ -148,7 +150,7 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/XmlTypesGen.h ${CMAKE_CURR
 
 #ADD_LIBRARY (${XMLBEANSXX_LIB} SHARED ${XMLBEANSXX_SRC})
 ADD_LIBRARY (${XMLBEANSXX_LIB} STATIC ${XMLBEANSXX_SRC})
-TARGET_LINK_LIBRARIES (${XMLBEANSXX_LIB} ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${GMP_LIBRARY} ${GMPXX_LIBRARY} ${BOOST_THREAD_LIBRARY} ${LIBXML2_LIB})
+TARGET_LINK_LIBRARIES (${XMLBEANSXX_LIB} ${XERCES_LIBRARY} ${BOOST_DATE_TIME_LIBRARY} ${LOG4CXX_LIBRARY} ${NUM_LIBRARY} ${BOOST_THREAD_LIBRARY} ${LIBXML2_LIB})
 SET_TARGET_PROPERTIES (${XMLBEANSXX_LIB} PROPERTIES SOVERSION ${XMLBEANSXX_SOVERSION})
 
 SET(INCLUDE_INSTALL_DIR  "${CMAKE_INSTALL_PREFIX}/include")
